--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "bulma": "^0.9.0",
-        "vue-router": "^3.3.4"
+        "es6-promise": "^4.2.8",
+        "vue-router": "^3.3.4",
+        "vuex": "^3.5.1"
     }
 }
