--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@creativebulma/bulma-collapsible": "^1.0.4",
         "bulma": "^0.9.0",
         "es6-promise": "^4.2.8",
         "vue-router": "^3.3.4",
